@@ -235,11 +235,20 @@ if test x$FOUNDHOPENGL = xno; then ENABLE_OPENGL=no;fi;
 
 AC_MSG_RESULT($ENABLE_OPENGL)
 
+dnl Check if user wants libglade bindings. Defaults to yes.
+AC_MSG_CHECKING([whether to build libglade bindings])
+
+AC_ARG_ENABLE(libglade,
+              [  --disable-libglade      do not generate libglade bindings],
+              [ENABLE_LIBGLADE=$enableval],[ENABLE_LIBGLADE=yes])
+
+AC_MSG_RESULT($ENABLE_LIBGLADE)
+
 dnl Check if user wants the various gnome modules. Defaults to yes.
 AC_MSG_CHECKING([whether to build gnome bindings])
 
 AC_ARG_ENABLE(gnome,
-              [  --disable-gnome         do not generate binding for any gnome modules],
+              [  --disable-gnome         do not generate bindings for any gnome modules],
               [ENABLE_GNOME=$enableval],[ENABLE_GNOME=yes])
 
 AC_MSG_RESULT($ENABLE_GNOME)
@@ -250,9 +259,11 @@ PKG_CHECK_MODULES(GTK,[glib-2.0 >= 2.0.0 gdk-2.0 >= 2.0.0 gtk+-2.0 >= 2.0.0 gdk-
 if test x$ENABLE_OPENGL = xyes; then
   PKG_CHECK_MODULES(GTKGLEXT,[gtkglext-1.0 >= 0.7.1])
 fi
+if test x$ENABLE_LIBGLADE = xyes; then
+  PKG_CHECK_MODULES(LIBGLADE,[libglade-2.0 >= 2.0.0])
+fi
 if test x$ENABLE_GNOME = xyes; then
   PKG_CHECK_MODULES(SOURCEVIEW,[gtksourceview-1.0 >= 0.6.0])
-  PKG_CHECK_MODULES(LIBGLADE,[libglade-2.0 >= 2.0.0])
 fi
 
 dnl The configuration program for GTK is kind of stupid in that it
@@ -518,6 +529,7 @@ dnl AC_SUBST(GTK_MAJOR_VERSION)
 dnl AC_SUBST(GTK_MINOR_VERSION)
 dnl AC_SUBST(GTK_MICRO_VERSION)
 AC_SUBST(ENABLE_OPENGL)
+AC_SUBST(ENABLE_LIBGLADE)
 AC_SUBST(ENABLE_GNOME)
 AC_SUBST(SOURCEVIEW_CFLAGS)
 AC_SUBST(SOURCEVIEW_LIBS)
